--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>AI Resume ATS</title>
+    <title>AI Resume Checker</title>
   </head>
   <body>
     <div id="root"></div>
