--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Resume Checker</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root"></div>  <!-- THIS MUST EXIST -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
